5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1670_2972.log
== TEST (2019-04-16 18:11:59) 
-- CODE:
x1=int(input("posição inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)




-- ERROR:
File "XXXX", line 1
    print input(5% comissao sobre o valor verndido 1.000.00 ou menos)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:13:11) 
-- CODE:
x1=int(input("posição inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)




-- EXECUTION TIME:
0.152812
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:

-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:

-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:41) 
-- CODE:
x1=int(input("posição inicial:"))
x2=int(input("posição final:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- EXECUTION TIME:
0.190027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:43) 
-- CODE:
x1=int(input("posição inicial:"))
x2=int(input("posição final:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:18:17) 
-- CODE:
x1=int(input("posicao inicial:"))
x2=int(input("posicao final:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- EXECUTION TIME:
0.20012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1670/2972/main.py", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:21) 
-- CODE:
x1=int(input("posicao inicial:"))
x2=int(input("posicao final:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:23) 
-- CODE:
x1=int(input("posicao inicial:"))
x2=int(input("posicao final:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:03) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:21:20) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(msg)
-- EXECUTION TIME:
0.176091
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:25) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(x2)
print(msg)
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:22:37) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(x2)
print(msg)
-- EXECUTION TIME:
0.189952
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:44) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="nao"
print(x2)
print(msg)
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:24:13) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="Nao"
print(x2)
print(msg)
-- OUTPUT:
3002
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:24:22) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="sim"
else:
	msg="Nao"
print(x2)
print(msg)
-- EXECUTION TIME:
0.190425
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:26:17) 
-- CODE:
x1=int(input("posicao inicial:"))
v=int(input("velocidade do objeto:"))
t=int(input("tempo de deslocamento:"))
x2= x1 + (v*t)
if(x2 >= 1000):
	msg="Sim"
else:
	msg="Nao"
print(x2)
print(msg)
-- EXECUTION TIME:
0.176495
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
